[package]
name = "pioneerFS"
version = "0.1.0"
edition = "2021"

[lib]
name = "pioneerfs"
path = "src/lib.rs"
test = true
doctest = true

[dependencies]
libp2p = { version = "0.51", features = ["tcp", "mdns", "gossipsub", "noise", "yamux", "ping"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
crossterm = "0.27"
ratatui = "0.24"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "integration"
path = "tests/integration_tests.rs"
