[package]
name = "pioneerFS"
version = "0.1.0"
edition = "2021"

[lib]
name = "pioneerfs"
path = "src/lib.rs"
test = true
doctest = true

[dependencies]
libp2p = { version = "0.53", features = ["tcp", "mdns", "gossipsub", "noise", "yamux", "ping", "serde", "kad", "kademlia"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_with = "3.4"
serde_millis = "0.1.1"
futures = "0.3"
crossterm = "0.27"
ratatui = "0.24"
hex = "0.4"
rand = "0.8"
warp = "0.3"
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "integration"
path = "tests/integration_tests.rs"
